# core_banking_system_es_cqrs

./: .gitignore  README.md  docker-compose.yml
aggregates/: .gitignore  Dockerfile  README.md  pom.xml
common_lib/: pom.xml
core_bank_api/: .gitignore  Dockerfile  README.md  pom.xml  pyproject.toml
dapr-components/: eventsource.yaml
es/: .identity-z9fqB7SduFHQPgq4LpppZQ  .state-crk5hmbqbvps73eibjfg  Dockerfile  README.md  config-dev.json  go.mod  go.sum  main.go
libraries/python/com-ivansoft-corebank-lib/: README.md  pyproject.toml
libraries/python/com-ivansoft-corebank-lib/com_ivansoft_corebank_lib/models/: Balance.py  Transaction.py  User.py
libraries/python/com-ivansoft-corebank-lib/tests/: test_Transaction.py
projections/account/: Dockerfile  README.md  pyproject.toml
projections/account/app/: main.py
projections/account/app/api/eventsource/v1/: subscribers.py
projections/account/app/api/routes/v1/: balance_handlers.py
projections/account/app/api/schemas/: CloudEventModel.py
projections/account/app/config/: settings.py
projections/account/app/db/: MongoBase.py
projections/account/app/db/balance/: BalanceModel.py  BalanceRepository.py
projections/account/app/db/transaction/: TransactionRepository.py
projections/account/app/db/user/: UserRepository.py
projections/account/app/services/: AccountService.py
projections/account/tests/: test_account_service.py  test_balance_repository.py  test_subscribers.py  test_transaction_repository.py
projections/clients_api/: README.md  pyproject.toml
projections/clients_api/app/: main.py
projections/clients_api/app/api/eventsource/v1/: transaction_subscriber.py
queries_bank_api/: Dockerfile  README.md  pyproject.toml
(+69 files in other folders)
